--- a/WTA_Wiki_Scraper.ipynb
+++ b/WTA_Wiki_Scraper.ipynb
@@ -36,37 +36,42 @@
    "outputs": [],
    "source": [
     "urls = [\n",
-    "    'https://en.wikipedia.org/wiki/Asdf_Xyz',\n",
-    "    'https://en.wikipedia.org/wiki/Serena_Williams',\n",
-    "    'https://en.wikipedia.org/wiki/Venus_Williams',\n",
-    "    'https://en.wikipedia.org/wiki/Simona_Halep',\n",
-    "    'https://en.wikipedia.org/wiki/Maria_Sharapova',\n",
-    "    'https://en.wikipedia.org/wiki/Caroline_Wozniacki',\n",
-    "    'https://en.wikipedia.org/wiki/Victoria_Azarenka',\n",
-    "    'https://en.wikipedia.org/wiki/Petra_Kvitova',\n",
-    "    'https://en.wikipedia.org/wiki/Angelique_Kerber',\n",
-    "    'https://en.wikipedia.org/wiki/Agnieszka_Radwanska',\n",
-    "    'https://en.wikipedia.org/wiki/Svetlana_Kuznetsova',\n",
-    "    'https://en.wikipedia.org/wiki/Martina_Hingis',\n",
-    "    'https://en.wikipedia.org/wiki/Garbine_Muguruza',\n",
-    "    'https://en.wikipedia.org/wiki/Garbi%C3%B1e_Muguruza',\n",
-    "    'https://en.wikipedia.org/wiki/Garbi%C3%B1e_Muguruza',\n",
-    "    'https://en.wikipedia.org/wiki/Kim_Clijsters',\n",
-    "    'https://en.wikipedia.org/wiki/Karolina_Pliskova',\n",
-    "    'https://en.wikipedia.org/wiki/Ashleigh_Barty',\n",
-    "    'https://en.wikipedia.org/wiki/Lindsay_Davenport',\n",
-    "    'https://en.wikipedia.org/wiki/Steffi_Graf',\n",
-    "    'https://en.wikipedia.org/wiki/Martina_Navratilova',\n",
-    "    'https://en.wikipedia.org/wiki/Elina_Svitolina',\n",
-    "    'https://en.wikipedia.org/wiki/Naomi_Osaka',\n",
-    "    'https://en.wikipedia.org/wiki/Justine_Henin',\n",
-    "    'https://en.wikipedia.org/wiki/Samantha_Stosur',\n",
-    "    'https://en.wikipedia.org/wiki/Jelena_Jankovic',\n",
+    "    #'https://en.wikipedia.org/wiki/Asdf_Xyz',\n",
+    "    #'https://en.wikipedia.org/wiki/Serena_Williams',\n",
+    "    #'https://en.wikipedia.org/wiki/Venus_Williams',\n",
+    "    #'https://en.wikipedia.org/wiki/Simona_Halep',\n",
+    "    #'https://en.wikipedia.org/wiki/Maria_Sharapova',\n",
+    "    #'https://en.wikipedia.org/wiki/Caroline_Wozniacki',\n",
+    "    #'https://en.wikipedia.org/wiki/Victoria_Azarenka',\n",
+    "    #'https://en.wikipedia.org/wiki/Petra_Kvitova',\n",
+    "    #'https://en.wikipedia.org/wiki/Angelique_Kerber',\n",
+    "    #'https://en.wikipedia.org/wiki/Agnieszka_Radwanska',\n",
+    "    #'https://en.wikipedia.org/wiki/Svetlana_Kuznetsova',\n",
+    "    #'https://en.wikipedia.org/wiki/Martina_Hingis',\n",
+    "    #'https://en.wikipedia.org/wiki/Garbine_Muguruza',\n",
+    "    #'https://en.wikipedia.org/wiki/Kim_Clijsters',\n",
+    "    #'https://en.wikipedia.org/wiki/Karolina_Pliskova',\n",
+    "    #'https://en.wikipedia.org/wiki/Ashleigh_Barty',\n",
+    "    #'https://en.wikipedia.org/wiki/Lindsay_Davenport',\n",
+    "    #'https://en.wikipedia.org/wiki/Steffi_Graf',\n",
+    "    #'https://en.wikipedia.org/wiki/Martina_Navratilova',\n",
+    "    #'https://en.wikipedia.org/wiki/Elina_Svitolina',\n",
+    "    #'https://en.wikipedia.org/wiki/Naomi_Osaka',\n",
+    "    #'https://en.wikipedia.org/wiki/Justine_Henin',\n",
+    "    #'https://en.wikipedia.org/wiki/Samantha_Stosur',\n",
+    "    #'https://en.wikipedia.org/wiki/Jelena_Jankovic',\n",
+    "    #'https://en.wikipedia.org/wiki/Iga_Swiatek',\n",
+    "    #'https://en.wikipedia.org/wiki/Cori_Gauff',\n",
+    "    #'https://en.wikipedia.org/wiki/Emma_Raducanu',\n",
+    "    'https://en.wikipedia.org/wiki/Qiang_Wang',\n",
+    "    'https://en.wikipedia.org/wiki/Anna_Kournikova',\n",
+    "    'https://en.wikipedia.org/wiki/Denise_Starr',\n",
+    "    'https://en.wikipedia.org/wiki/Kai-Chen_Chang',\n",
+    "    ]\n",
     "\n",
-    "    'https://en.wikipedia.org/wiki/Iga_Swiatek',\n",
-    "    'https://en.wikipedia.org/wiki/Cori_Gauff',\n",
-    "    'https://en.wikipedia.org/wiki/Emma_Raducanu',\n",
-    "    ]"
+    "def get_urls_from_list():\n",
+    "    for url in urls:\n",
+    "        yield url"
    ]
   },
   {
@@ -156,6 +161,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "destroyed-layout",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_urls_from_df():\n",
+    "    df = pd.read_pickle('./Data/earnings.pickle')\n",
+    "    for i in range(0, len(df)):\n",
+    "        url = df.loc[df.index[i], 'WikiLink']\n",
+    "        yield url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "pressed-ending",
    "metadata": {},
    "outputs": [],
@@ -163,9 +182,8 @@
     "from random import random\n",
     "from time import sleep\n",
     "\n",
-    "df = pd.read_pickle('./Data/earnings.pickle')\n",
-    "for i in range(0, len(df)):\n",
-    "    url = df.loc[df.index[i], 'WikiLink']\n",
+    "for url in get_urls_from_list():\n",
+    "#for url in get_urls_from_df():\n",
     "    print(\"processing: \" + url)\n",
     "    r = random()\n",
     "    sleep(r)\n",
@@ -188,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "above-monitoring",
+   "id": "abandoned-complex",
    "metadata": {},
    "outputs": [],
    "source": [
