--- a/WTA_Wiki_Scraper.ipynb
+++ b/WTA_Wiki_Scraper.ipynb
@@ -37,9 +37,9 @@
    "source": [
     "urls = [\n",
     "    #'https://en.wikipedia.org/wiki/Asdf_Xyz',\n",
-    "    #'https://en.wikipedia.org/wiki/Serena_Williams',\n",
+    "    'https://en.wikipedia.org/wiki/Serena_Williams',\n",
     "    #'https://en.wikipedia.org/wiki/Venus_Williams',\n",
-    "    #'https://en.wikipedia.org/wiki/Simona_Halep',\n",
+    "    'https://en.wikipedia.org/wiki/Simona_Halep',\n",
     "    #'https://en.wikipedia.org/wiki/Maria_Sharapova',\n",
     "    #'https://en.wikipedia.org/wiki/Caroline_Wozniacki',\n",
     "    #'https://en.wikipedia.org/wiki/Victoria_Azarenka',\n",
@@ -67,6 +67,7 @@
     "    'https://en.wikipedia.org/wiki/Anna_Kournikova',\n",
     "    'https://en.wikipedia.org/wiki/Denise_Starr',\n",
     "    'https://en.wikipedia.org/wiki/Kai-Chen_Chang',\n",
+    "    'https://en.wikipedia.org/wiki/Marie-Gayanay_Mikaelian',\n",
     "    ]\n",
     "\n",
     "def get_urls_from_list():\n",
@@ -123,8 +124,12 @@
    "source": [
     "def get_singles_subtable(table):\n",
     "    doubles_idx = table.index[table['Attr'] == 'Doubles'].to_list()\n",
-    "    sub_tab = table[:doubles_idx[0]]\n",
-    "    return sub_tab"
+    "    #print(doubles_idx)\n",
+    "    if len(doubles_idx) > 0:\n",
+    "        sub_tab = table[:doubles_idx[0]]\n",
+    "        return sub_tab\n",
+    "    else:\n",
+    "        return table"
    ]
   },
   {
@@ -149,11 +154,13 @@
     "\n",
     "    table = tables[0]\n",
     "    (rows, cols) = table.shape\n",
-    "    if cols == 2:\n",
-    "        table.columns = ['Attr', 'Value']\n",
-    "    else:\n",
-    "        table.columns = ['Attr', 'Value', 'Extra']\n",
-    "\n",
+    "    #print(table.shape)\n",
+    "    \n",
+    "    columns = ['Attr', 'Value']\n",
+    "    for i in range(2, cols):\n",
+    "        columns.append('Extra_' + str(i))\n",
+    "    table.columns = columns\n",
+    "    \n",
     "    sub_tab = get_singles_subtable(table)\n",
     "    return find_data_items(sub_tab)"
    ]
@@ -161,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "destroyed-layout",
+   "id": "capital-builder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,14 +183,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "pressed-ending",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from random import random\n",
     "from time import sleep\n",
     "\n",
-    "for url in get_urls_from_list():\n",
-    "#for url in get_urls_from_df():\n",
+    "#for url in get_urls_from_list():\n",
+    "for url in get_urls_from_df():\n",
     "    print(\"processing: \" + url)\n",
     "    r = random()\n",
     "    sleep(r)\n",
@@ -206,11 +215,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abandoned-complex",
+   "id": "false-feeling",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.dtypes"
+    "pi.to_html('./Data/player_info.html', render_links=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aerial-computer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pi.to_pickle('./Data/player_info.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "streaming-government",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "print(len(BAD_URLS))\n",
+    "file = open('./Data/bad_urls.pickle', 'wb')\n",
+    "\n",
+    "# dump information to that file\n",
+    "pickle.dump(BAD_URLS, file)\n",
+    "\n",
+    "# close the file\n",
+    "file.close()\n"
    ]
   }
  ],
