--- a/WTA_Earnings_tika.ipynb
+++ b/WTA_Earnings_tika.ipynb
@@ -115,9 +115,67 @@
     "df['Earnings'] = df['Earnings'].str.replace(',', '').astype(float)\n",
     "df['WikiLink'] = create_wiki_link(df['FirstName'], df['LastName'])\n",
     "#df.to_excel('earnings.xlsx', index=False)\n",
-    "df.to_html('earnings.html', render_links=True, index=False)\n",
+    "df.to_html('earnings.html')\n",
     "df.to_pickle('./Data/earnings.pickle')\n",
+    "\n",
+    "for i in range(0, len(df)):\n",
+    "    url = df.loc[df.index[i], 'WikiLink']\n",
+    "    print(\"processing: \" + url)\n",
+    "\n",
     "df.head(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "centered-wheel",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.read_pickle('./Data/earnings.pickle')\n",
+    "for i in range(0, len(df2)):\n",
+    "    url = df2.loc[df2.index[i], 'WikiLink']\n",
+    "    print(\"processing: \" + url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "opposite-youth",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_join = pd.merge(\n",
+    "    df,\n",
+    "    df2,\n",
+    "    how=\"inner\",\n",
+    "    on='WikiLink',\n",
+    "    left_on=None,\n",
+    "    right_on=None,\n",
+    "    left_index=False,\n",
+    "    right_index=False,\n",
+    "    sort=False,\n",
+    "    suffixes=(\"_x\", \"_y\"),\n",
+    "    copy=True,\n",
+    "    indicator=False,\n",
+    "    validate=None,\n",
+    ")\n",
+    "\n",
+    "df_join.to_html('./Data/debug.html', render_links=True, index=False)\n",
+    "df_join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "liked-knight",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(df))\n",
+    "print(len(df2))\n",
+    "df_dups = df_join.value_counts('WikiLink')\n",
+    "df_dups.head(7)"
    ]
   },
   {
