--- a/WTA_PlayerInfo_Cleanup.ipynb
+++ b/WTA_PlayerInfo_Cleanup.ipynb
@@ -3,20 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "positive-latest",
+   "id": "rocky-chance",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import re\n",
-    "import math"
+    "import re"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "valid-terrorism",
+   "id": "fancy-cuisine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "anonymous-chrome",
+   "id": "informative-alignment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +51,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "boring-connection",
+   "id": "cordless-kingston",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@np.vectorize\n",
+    "\n",
+    "def parse_height(value):\n",
+    "    print('==========================================')\n",
+    "    print(value)\n",
+    "    print(type(value))\n",
+    "    if type(value) == str:\n",
+    "        re_res = re.search(r'(\\d{3}).cm', value)\n",
+    "        if re_res:\n",
+    "            height = re_res.group(1)\n",
+    "            print('height = ' + height)\n",
+    "            return height\n",
+    "        else:\n",
+    "            re_res = re.search(r'(\\d\\.\\d\\d).m', value)\n",
+    "            if re_res:\n",
+    "                height = re_res.group(1)\n",
+    "                print('height = ' + height)\n",
+    "                return height.replace('.', '')\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "pi['Height_x'] = parse_height(pi['Height'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "labeled-paint",
    "metadata": {},
    "outputs": [],
    "source": [
