--- a/WTA_PlayerInfo_Cleanup.ipynb
+++ b/WTA_PlayerInfo_Cleanup.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rocky-chance",
+   "id": "ceramic-tractor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fancy-cuisine",
+   "id": "several-pontiac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "informative-alignment",
+   "id": "basic-seminar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,11 +37,14 @@
     "    print(value)\n",
     "    print(type(value))\n",
     "    if type(value) == str:\n",
-    "        re_res = re.search(r'age (\\d{2})', value)\n",
+    "        re_res = re.search(r'age\\s+(\\d{2})', value)\n",
     "        if re_res:\n",
-    "            age = re_res.group(0)\n",
+    "            print('match')\n",
+    "            age = re_res.group(1)\n",
     "            print('age = ' + age)\n",
     "            return age\n",
+    "        else:\n",
+    "            print('Not matched')\n",
     "    else:\n",
     "        return None\n",
     "\n",
@@ -51,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cordless-kingston",
+   "id": "regional-gardening",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,11 +85,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "labeled-paint",
+   "id": "independent-sigma",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@np.vectorize\n",
+    "\n",
+    "def parse_rank(value):\n",
+    "    print('==========================================')\n",
+    "    print(value)\n",
+    "    print(type(value))\n",
+    "    if type(value) == str:\n",
+    "        re_res = re.search(r'No. (\\d+)', value)\n",
+    "        if re_res:\n",
+    "            rank = re_res.group(1)\n",
+    "            print('rank = ' + rank)\n",
+    "            return rank\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "pi['HighRank_x'] = parse_rank(pi['HighRank'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "colored-audio",
    "metadata": {},
    "outputs": [],
    "source": [
     "pi.head(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "automatic-appliance",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pi.to_html('./Data/parsed_player_info.html')"
    ]
   }
  ],
