--- a/WTA_PlayerInfo_Cleanup.ipynb
+++ b/WTA_PlayerInfo_Cleanup.ipynb
@@ -110,6 +110,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "placed-strain",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@np.vectorize\n",
+    "\n",
+    "def parse_year_of_high_rank(value):\n",
+    "    print('==========================================')\n",
+    "    print(value)\n",
+    "    print(type(value))\n",
+    "    if type(value) == str:\n",
+    "        re_res = re.search(r'(\\d{4})', value)\n",
+    "        if re_res:\n",
+    "            year_of_high_rank = re_res.group(1)\n",
+    "            print('year_of_high_rank = ' + year_of_high_rank)\n",
+    "            return year_of_high_rank\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "pi['YearOfHighRank'] = parse_year_of_high_rank(pi['HighRank'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "colored-audio",
    "metadata": {},
    "outputs": [],
