--- a/WTA_PlayerInfo_Cleanup.ipynb
+++ b/WTA_PlayerInfo_Cleanup.ipynb
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "placed-strain",
+   "id": "african-honor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,6 +130,66 @@
     "        return None\n",
     "\n",
     "pi['YearOfHighRank'] = parse_year_of_high_rank(pi['HighRank'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "departmental-local",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@np.vectorize\n",
+    "\n",
+    "def parse_career_wins(value):\n",
+    "    print('==========================================')\n",
+    "    print(value)\n",
+    "    print(type(value))\n",
+    "    if type(value) == str:\n",
+    "        re_res = re.search(r'^(\\d+)', value)\n",
+    "        if re_res:\n",
+    "            wins = re_res.group(1)\n",
+    "            print('wins = ' + wins)\n",
+    "            return wins\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "pi['Wins'] = parse_career_wins(pi['CareerRecord'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "sufficient-sight",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@np.vectorize\n",
+    "\n",
+    "def parse_career_losses(value):\n",
+    "    print('==========================================')\n",
+    "    print(value)\n",
+    "    print(type(value))\n",
+    "    if type(value) == str:\n",
+    "        re_res = re.search(r'\\D(\\d+)', value)\n",
+    "        if re_res:\n",
+    "            losses = re_res.group(1)\n",
+    "            print('losses = ' + losses)\n",
+    "            return losses\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "pi['Losses'] = parse_career_losses(pi['CareerRecord'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "noble-prescription",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pi['WinPct'] = 100*pi['Win']/(pi['Win'] + pi['Loss']) # Need to convert strings to numbers"
    ]
   },
   {
