--- a/WTA_PlayerInfo_Cleanup.ipynb
+++ b/WTA_PlayerInfo_Cleanup.ipynb
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "african-honor",
+   "id": "adverse-photography",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,14 +119,13 @@
     "def parse_year_of_high_rank(value):\n",
     "    print('==========================================')\n",
     "    print(value)\n",
-    "    print(type(value))\n",
-    "    if type(value) == str:\n",
+    "    try:\n",
     "        re_res = re.search(r'(\\d{4})', value)\n",
     "        if re_res:\n",
     "            year_of_high_rank = re_res.group(1)\n",
     "            print('year_of_high_rank = ' + year_of_high_rank)\n",
     "            return year_of_high_rank\n",
-    "    else:\n",
+    "    except:\n",
     "        return None\n",
     "\n",
     "pi['YearOfHighRank'] = parse_year_of_high_rank(pi['HighRank'])"
@@ -135,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "departmental-local",
+   "id": "handled-lightning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,23 +143,22 @@
     "def parse_career_wins(value):\n",
     "    print('==========================================')\n",
     "    print(value)\n",
-    "    print(type(value))\n",
-    "    if type(value) == str:\n",
-    "        re_res = re.search(r'^(\\d+)', value)\n",
+    "    try:\n",
+    "        re_res = re.search(r'^([0-9,]+)', value)\n",
     "        if re_res:\n",
-    "            wins = re_res.group(1)\n",
+    "            wins = re_res.group(1).replace(',', '')\n",
     "            print('wins = ' + wins)\n",
-    "            return wins\n",
-    "    else:\n",
+    "            return float(wins)\n",
+    "    except:\n",
     "        return None\n",
     "\n",
-    "pi['Wins'] = parse_career_wins(pi['CareerRecord'])"
+    "pi['Win'] = parse_career_wins(pi['CareerRecord'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sufficient-sight",
+   "id": "capable-microwave",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,27 +167,26 @@
     "def parse_career_losses(value):\n",
     "    print('==========================================')\n",
     "    print(value)\n",
-    "    print(type(value))\n",
-    "    if type(value) == str:\n",
-    "        re_res = re.search(r'\\D(\\d+)', value)\n",
+    "    try:\n",
+    "        re_res = re.search(r'[0-9,]+\\D(\\d+)', value)\n",
     "        if re_res:\n",
-    "            losses = re_res.group(1)\n",
+    "            losses = re_res.group(1).replace(',', '')\n",
     "            print('losses = ' + losses)\n",
-    "            return losses\n",
-    "    else:\n",
+    "            return float(losses)\n",
+    "    except:\n",
     "        return None\n",
     "\n",
-    "pi['Losses'] = parse_career_losses(pi['CareerRecord'])"
+    "pi['Loss'] = parse_career_losses(pi['CareerRecord'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "noble-prescription",
+   "id": "presidential-tooth",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pi['WinPct'] = 100*pi['Win']/(pi['Win'] + pi['Loss']) # Need to convert strings to numbers"
+    "pi['WinPct'] = 100*pi['Win']/(pi['Win'] + pi['Loss']) # Need to convert strings to numbers"
    ]
   },
   {
@@ -211,6 +208,14 @@
    "source": [
     "pi.to_html('./Data/parsed_player_info.html')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "economic-plastic",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
