--- a/WTA_PlayerInfo_Cleanup.ipynb
+++ b/WTA_PlayerInfo_Cleanup.ipynb
@@ -35,17 +35,17 @@
     "def parse_age(value):\n",
     "    print('==========================================')\n",
     "    print(value)\n",
-    "    print(type(value))\n",
-    "    if type(value) == str:\n",
+    "    try:\n",
     "        re_res = re.search(r'age\\s+(\\d{2})', value)\n",
     "        if re_res:\n",
     "            print('match')\n",
     "            age = re_res.group(1)\n",
     "            print('age = ' + age)\n",
-    "            return age\n",
+    "            return float(age)\n",
     "        else:\n",
     "            print('Not matched')\n",
-    "    else:\n",
+    "            return None\n",
+    "    except:\n",
     "        return None\n",
     "\n",
     "pi['Age'] = parse_age(pi['Born'])"
@@ -63,8 +63,7 @@
     "def parse_height(value):\n",
     "    print('==========================================')\n",
     "    print(value)\n",
-    "    print(type(value))\n",
-    "    if type(value) == str:\n",
+    "    try:\n",
     "        re_res = re.search(r'(\\d{3}).cm', value)\n",
     "        if re_res:\n",
     "            height = re_res.group(1)\n",
@@ -76,7 +75,7 @@
     "                height = re_res.group(1)\n",
     "                print('height = ' + height)\n",
     "                return height.replace('.', '')\n",
-    "    else:\n",
+    "    except:\n",
     "        return None\n",
     "\n",
     "pi['Height_x'] = parse_height(pi['Height'])"
@@ -94,14 +93,13 @@
     "def parse_rank(value):\n",
     "    print('==========================================')\n",
     "    print(value)\n",
-    "    print(type(value))\n",
-    "    if type(value) == str:\n",
+    "    try:\n",
     "        re_res = re.search(r'No. (\\d+)', value)\n",
     "        if re_res:\n",
     "            rank = re_res.group(1)\n",
     "            print('rank = ' + rank)\n",
-    "            return rank\n",
-    "    else:\n",
+    "            return float(rank)\n",
+    "    except:\n",
     "        return None\n",
     "\n",
     "pi['HighRank_x'] = parse_rank(pi['HighRank'])"
@@ -110,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adverse-photography",
+   "id": "indonesian-generic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "handled-lightning",
+   "id": "ancient-diploma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "capable-microwave",
+   "id": "measured-conditions",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,11 +180,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "presidential-tooth",
+   "id": "mature-builder",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pi['WinPct'] = 100*pi['Win']/(pi['Win'] + pi['Loss']) # Need to convert strings to numbers"
+    "pi['WinPct'] = 100*pi['Win']/(pi['Win'] + pi['Loss']) # Need to convert strings to numbers\n",
+    "pi['InverseRank'] = 1.0/pi['HighRank_x']\n",
+    "pi['YearBorn'] = 2022 - pi['Age']"
    ]
   },
   {
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "economic-plastic",
+   "id": "precise-logging",
    "metadata": {},
    "outputs": [],
    "source": []
