--- a/WTA_PlayerInfo_Cleanup.ipynb
+++ b/WTA_PlayerInfo_Cleanup.ipynb
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "indonesian-generic",
+   "id": "anticipated-grass",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ancient-diploma",
+   "id": "developed-judgment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "measured-conditions",
+   "id": "broke-diabetes",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mature-builder",
+   "id": "experienced-bargain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,16 +206,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pi.to_html('./Data/parsed_player_info.html')"
+    "pi.to_html('./Data/parsed_player_info.html')\n",
+    "pi.to_pickle('./Data/player_info_enhanced.pickle')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "precise-logging",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
